interpreter/logo/logoParser.py
# Generated from logo.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class logoParser ( Parser ):

    grammarFileName = "logo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'to'", "'end'", "':'", "','", "'repeat'", 
                     "'['", "']'", "'if'", "'<'", "'>'", "'='", "'make'", 
                     "'print'", "'+'", "'-'", "'*'", "'/'", "'fd'", "'forward'", 
                     "'bk'", "'backward'", "'rt'", "'right'", "'lt'", "'left'", 
                     "'cs'", "'clearscreen'", "'pu'", "'penup'", "'pd'", 
                     "'pendown'", "'ht'", "'hideturtle'", "'st'", "'showturtle'", 
                     "'home'", "'stop'", "'label'", "'setxy'", "'random'", 
                     "'for'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRINGLITERAL", "STRING", 
                      "NUMBER", "COMMENT", "EOL", "WS" ]

    RULE_prog = 0
    RULE_line = 1
    RULE_cmd = 2
    RULE_procedureInvocation = 3
    RULE_procedureDeclaration = 4
    RULE_parameterDeclarations = 5
    RULE_func = 6
    RULE_repeat = 7
    RULE_block = 8
    RULE_ife = 9
    RULE_comparison = 10
    RULE_comparisonOperator = 11
    RULE_make = 12
    RULE_print = 13
    RULE_quotedstring = 14
    RULE_name = 15
    RULE_value = 16
    RULE_signExpression = 17
    RULE_multiplyingExpression = 18
    RULE_expression = 19
    RULE_deref = 20
    RULE_fd = 21
    RULE_bk = 22
    RULE_rt = 23
    RULE_lt = 24
    RULE_cs = 25
    RULE_pu = 26
    RULE_pd = 27
    RULE_ht = 28
    RULE_st = 29
    RULE_home = 30
    RULE_stop = 31
    RULE_label = 32
    RULE_setxy = 33
    RULE_random = 34
    RULE_fore = 35
    RULE_number = 36
    RULE_comment = 37

    ruleNames =  [ "prog", "line", "cmd", "procedureInvocation", "procedureDeclaration", 
                   "parameterDeclarations", "func", "repeat", "block", "ife", 
                   "comparison", "comparisonOperator", "make", "print", 
                   "quotedstring", "name", "value", "signExpression", "multiplyingExpression", 
                   "expression", "deref", "fd", "bk", "rt", "lt", "cs", 
                   "pu", "pd", "ht", "st", "home", "stop", "label", "setxy", 
                   "random", "fore", "number", "comment" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    STRINGLITERAL=42
    STRING=43
    NUMBER=44
    COMMENT=45
    EOL=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(logoParser.EOL)
            else:
                return self.getToken(logoParser.EOL, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.LineContext)
            else:
                return self.getTypedRuleContext(logoParser.LineContext,i)


        def getRuleIndex(self):
            return logoParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = logoParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logoParser.T__0) | (1 << logoParser.T__4) | (1 << logoParser.T__7) | (1 << logoParser.T__11) | (1 << logoParser.T__12) | (1 << logoParser.T__17) | (1 << logoParser.T__18) | (1 << logoParser.T__19) | (1 << logoParser.T__20) | (1 << logoParser.T__21) | (1 << logoParser.T__22) | (1 << logoParser.T__23) | (1 << logoParser.T__24) | (1 << logoParser.T__25) | (1 << logoParser.T__26) | (1 << logoParser.T__27) | (1 << logoParser.T__28) | (1 << logoParser.T__29) | (1 << logoParser.T__30) | (1 << logoParser.T__31) | (1 << logoParser.T__32) | (1 << logoParser.T__33) | (1 << logoParser.T__34) | (1 << logoParser.T__35) | (1 << logoParser.T__36) | (1 << logoParser.T__37) | (1 << logoParser.T__38) | (1 << logoParser.T__40) | (1 << logoParser.STRING) | (1 << logoParser.COMMENT))) != 0):
                        self.state = 76
                        self.line()


                    self.state = 79
                    self.match(logoParser.EOL)

                else:
                    raise NoViableAltException(self)
                self.state = 82 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logoParser.T__0) | (1 << logoParser.T__4) | (1 << logoParser.T__7) | (1 << logoParser.T__11) | (1 << logoParser.T__12) | (1 << logoParser.T__17) | (1 << logoParser.T__18) | (1 << logoParser.T__19) | (1 << logoParser.T__20) | (1 << logoParser.T__21) | (1 << logoParser.T__22) | (1 << logoParser.T__23) | (1 << logoParser.T__24) | (1 << logoParser.T__25) | (1 << logoParser.T__26) | (1 << logoParser.T__27) | (1 << logoParser.T__28) | (1 << logoParser.T__29) | (1 << logoParser.T__30) | (1 << logoParser.T__31) | (1 << logoParser.T__32) | (1 << logoParser.T__33) | (1 << logoParser.T__34) | (1 << logoParser.T__35) | (1 << logoParser.T__36) | (1 << logoParser.T__37) | (1 << logoParser.T__38) | (1 << logoParser.T__40) | (1 << logoParser.STRING) | (1 << logoParser.COMMENT))) != 0):
                self.state = 84
                self.line()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.CmdContext)
            else:
                return self.getTypedRuleContext(logoParser.CmdContext,i)


        def comment(self):
            return self.getTypedRuleContext(logoParser.CommentContext,0)


        def print(self):
            return self.getTypedRuleContext(logoParser.PrintContext,0)


        def procedureDeclaration(self):
            return self.getTypedRuleContext(logoParser.ProcedureDeclarationContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = logoParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [logoParser.T__4, logoParser.T__7, logoParser.T__11, logoParser.T__17, logoParser.T__18, logoParser.T__19, logoParser.T__20, logoParser.T__21, logoParser.T__22, logoParser.T__23, logoParser.T__24, logoParser.T__25, logoParser.T__26, logoParser.T__27, logoParser.T__28, logoParser.T__29, logoParser.T__30, logoParser.T__31, logoParser.T__32, logoParser.T__33, logoParser.T__34, logoParser.T__35, logoParser.T__36, logoParser.T__37, logoParser.T__38, logoParser.T__40, logoParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 87
                    self.cmd()
                    self.state = 90 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logoParser.T__4) | (1 << logoParser.T__7) | (1 << logoParser.T__11) | (1 << logoParser.T__17) | (1 << logoParser.T__18) | (1 << logoParser.T__19) | (1 << logoParser.T__20) | (1 << logoParser.T__21) | (1 << logoParser.T__22) | (1 << logoParser.T__23) | (1 << logoParser.T__24) | (1 << logoParser.T__25) | (1 << logoParser.T__26) | (1 << logoParser.T__27) | (1 << logoParser.T__28) | (1 << logoParser.T__29) | (1 << logoParser.T__30) | (1 << logoParser.T__31) | (1 << logoParser.T__32) | (1 << logoParser.T__33) | (1 << logoParser.T__34) | (1 << logoParser.T__35) | (1 << logoParser.T__36) | (1 << logoParser.T__37) | (1 << logoParser.T__38) | (1 << logoParser.T__40) | (1 << logoParser.STRING))) != 0)):
                        break

                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==logoParser.COMMENT:
                    self.state = 92
                    self.comment()


                pass
            elif token in [logoParser.COMMENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.comment()
                pass
            elif token in [logoParser.T__12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.print()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==logoParser.COMMENT:
                    self.state = 97
                    self.comment()


                pass
            elif token in [logoParser.T__0]:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.procedureDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CmdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def repeat(self):
            return self.getTypedRuleContext(logoParser.RepeatContext,0)


        def fd(self):
            return self.getTypedRuleContext(logoParser.FdContext,0)


        def bk(self):
            return self.getTypedRuleContext(logoParser.BkContext,0)


        def rt(self):
            return self.getTypedRuleContext(logoParser.RtContext,0)


        def lt(self):
            return self.getTypedRuleContext(logoParser.LtContext,0)


        def cs(self):
            return self.getTypedRuleContext(logoParser.CsContext,0)


        def pu(self):
            return self.getTypedRuleContext(logoParser.PuContext,0)


        def pd(self):
            return self.getTypedRuleContext(logoParser.PdContext,0)


        def ht(self):
            return self.getTypedRuleContext(logoParser.HtContext,0)


        def st(self):
            return self.getTypedRuleContext(logoParser.StContext,0)


        def home(self):
            return self.getTypedRuleContext(logoParser.HomeContext,0)


        def label(self):
            return self.getTypedRuleContext(logoParser.LabelContext,0)


        def setxy(self):
            return self.getTypedRuleContext(logoParser.SetxyContext,0)


        def make(self):
            return self.getTypedRuleContext(logoParser.MakeContext,0)


        def procedureInvocation(self):
            return self.getTypedRuleContext(logoParser.ProcedureInvocationContext,0)


        def ife(self):
            return self.getTypedRuleContext(logoParser.IfeContext,0)


        def stop(self):
            return self.getTypedRuleContext(logoParser.StopContext,0)


        def fore(self):
            return self.getTypedRuleContext(logoParser.ForeContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd" ):
                return visitor.visitCmd(self)
            else:
                return visitor.visitChildren(self)




    def cmd(self):

        localctx = logoParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_cmd)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [logoParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.repeat()
                pass
            elif token in [logoParser.T__17, logoParser.T__18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.fd()
                pass
            elif token in [logoParser.T__19, logoParser.T__20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.bk()
                pass
            elif token in [logoParser.T__21, logoParser.T__22]:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.rt()
                pass
            elif token in [logoParser.T__23, logoParser.T__24]:
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.lt()
                pass
            elif token in [logoParser.T__25, logoParser.T__26]:
                self.enterOuterAlt(localctx, 6)
                self.state = 108
                self.cs()
                pass
            elif token in [logoParser.T__27, logoParser.T__28]:
                self.enterOuterAlt(localctx, 7)
                self.state = 109
                self.pu()
                pass
            elif token in [logoParser.T__29, logoParser.T__30]:
                self.enterOuterAlt(localctx, 8)
                self.state = 110
                self.pd()
                pass
            elif token in [logoParser.T__31, logoParser.T__32]:
                self.enterOuterAlt(localctx, 9)
                self.state = 111
                self.ht()
                pass
            elif token in [logoParser.T__33, logoParser.T__34]:
                self.enterOuterAlt(localctx, 10)
                self.state = 112
                self.st()
                pass
            elif token in [logoParser.T__35]:
                self.enterOuterAlt(localctx, 11)
                self.state = 113
                self.home()
                pass
            elif token in [logoParser.T__37]:
                self.enterOuterAlt(localctx, 12)
                self.state = 114
                self.label()
                pass
            elif token in [logoParser.T__38]:
                self.enterOuterAlt(localctx, 13)
                self.state = 115
                self.setxy()
                pass
            elif token in [logoParser.T__11]:
                self.enterOuterAlt(localctx, 14)
                self.state = 116
                self.make()
                pass
            elif token in [logoParser.STRING]:
                self.enterOuterAlt(localctx, 15)
                self.state = 117
                self.procedureInvocation()
                pass
            elif token in [logoParser.T__7]:
                self.enterOuterAlt(localctx, 16)
                self.state = 118
                self.ife()
                pass
            elif token in [logoParser.T__36]:
                self.enterOuterAlt(localctx, 17)
                self.state = 119
                self.stop()
                pass
            elif token in [logoParser.T__40]:
                self.enterOuterAlt(localctx, 18)
                self.state = 120
                self.fore()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcedureInvocationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(logoParser.NameContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(logoParser.ExpressionContext,i)


        def getRuleIndex(self):
            return logoParser.RULE_procedureInvocation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureInvocation" ):
                listener.enterProcedureInvocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureInvocation" ):
                listener.exitProcedureInvocation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureInvocation" ):
                return visitor.visitProcedureInvocation(self)
            else:
                return visitor.visitChildren(self)




    def procedureInvocation(self):

        localctx = logoParser.ProcedureInvocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_procedureInvocation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.name()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logoParser.T__2) | (1 << logoParser.T__13) | (1 << logoParser.T__14) | (1 << logoParser.T__39) | (1 << logoParser.NUMBER))) != 0):
                self.state = 124
                self.expression()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcedureDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(logoParser.NameContext,0)


        def parameterDeclarations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.ParameterDeclarationsContext)
            else:
                return self.getTypedRuleContext(logoParser.ParameterDeclarationsContext,i)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(logoParser.EOL)
            else:
                return self.getToken(logoParser.EOL, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.LineContext)
            else:
                return self.getTypedRuleContext(logoParser.LineContext,i)


        def getRuleIndex(self):
            return logoParser.RULE_procedureDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureDeclaration" ):
                listener.enterProcedureDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureDeclaration" ):
                listener.exitProcedureDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureDeclaration" ):
                return visitor.visitProcedureDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def procedureDeclaration(self):

        localctx = logoParser.ProcedureDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_procedureDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(logoParser.T__0)
            self.state = 131
            self.name()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==logoParser.T__2:
                self.state = 132
                self.parameterDeclarations()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 138
                self.match(logoParser.EOL)


            self.state = 145 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logoParser.T__0) | (1 << logoParser.T__4) | (1 << logoParser.T__7) | (1 << logoParser.T__11) | (1 << logoParser.T__12) | (1 << logoParser.T__17) | (1 << logoParser.T__18) | (1 << logoParser.T__19) | (1 << logoParser.T__20) | (1 << logoParser.T__21) | (1 << logoParser.T__22) | (1 << logoParser.T__23) | (1 << logoParser.T__24) | (1 << logoParser.T__25) | (1 << logoParser.T__26) | (1 << logoParser.T__27) | (1 << logoParser.T__28) | (1 << logoParser.T__29) | (1 << logoParser.T__30) | (1 << logoParser.T__31) | (1 << logoParser.T__32) | (1 << logoParser.T__33) | (1 << logoParser.T__34) | (1 << logoParser.T__35) | (1 << logoParser.T__36) | (1 << logoParser.T__37) | (1 << logoParser.T__38) | (1 << logoParser.T__40) | (1 << logoParser.STRING) | (1 << logoParser.COMMENT))) != 0):
                    self.state = 141
                    self.line()


                self.state = 144
                self.match(logoParser.EOL)
                self.state = 147 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logoParser.T__0) | (1 << logoParser.T__4) | (1 << logoParser.T__7) | (1 << logoParser.T__11) | (1 << logoParser.T__12) | (1 << logoParser.T__17) | (1 << logoParser.T__18) | (1 << logoParser.T__19) | (1 << logoParser.T__20) | (1 << logoParser.T__21) | (1 << logoParser.T__22) | (1 << logoParser.T__23) | (1 << logoParser.T__24) | (1 << logoParser.T__25) | (1 << logoParser.T__26) | (1 << logoParser.T__27) | (1 << logoParser.T__28) | (1 << logoParser.T__29) | (1 << logoParser.T__30) | (1 << logoParser.T__31) | (1 << logoParser.T__32) | (1 << logoParser.T__33) | (1 << logoParser.T__34) | (1 << logoParser.T__35) | (1 << logoParser.T__36) | (1 << logoParser.T__37) | (1 << logoParser.T__38) | (1 << logoParser.T__40) | (1 << logoParser.STRING) | (1 << logoParser.COMMENT) | (1 << logoParser.EOL))) != 0)):
                    break

            self.state = 149
            self.match(logoParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterDeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(logoParser.NameContext,0)


        def parameterDeclarations(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.ParameterDeclarationsContext)
            else:
                return self.getTypedRuleContext(logoParser.ParameterDeclarationsContext,i)


        def getRuleIndex(self):
            return logoParser.RULE_parameterDeclarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterDeclarations" ):
                listener.enterParameterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterDeclarations" ):
                listener.exitParameterDeclarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDeclarations" ):
                return visitor.visitParameterDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def parameterDeclarations(self):

        localctx = logoParser.ParameterDeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameterDeclarations)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(logoParser.T__2)
            self.state = 152
            self.name()
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 153
                    self.match(logoParser.T__3)
                    self.state = 154
                    self.parameterDeclarations() 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def random(self):
            return self.getTypedRuleContext(logoParser.RandomContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = logoParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.random()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RepeatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(logoParser.NumberContext,0)


        def block(self):
            return self.getTypedRuleContext(logoParser.BlockContext,0)


        def getRuleIndex(self):
            return logoParser.RULE_repeat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeat" ):
                listener.enterRepeat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeat" ):
                listener.exitRepeat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeat" ):
                return visitor.visitRepeat(self)
            else:
                return visitor.visitChildren(self)




    def repeat(self):

        localctx = logoParser.RepeatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_repeat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(logoParser.T__4)
            self.state = 163
            self.number()
            self.state = 164
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logoParser.CmdContext)
            else:
                return self.getTypedRuleContext(logoParser.CmdContext,i)


        def getRuleIndex(self):
            return logoParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = logoParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(logoParser.T__5)
            self.state = 168 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 167
                self.cmd()
                self.state = 170 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << logoParser.T__4) | (1 << logoParser.T__7) | (1 << logoParser.T__11) | (1 << logoParser.T__17) | (1 << logoParser.T__18) | (1 << logoParser.T__19) | (1 << logoParser.T__20) | (1 << logoParser.T__21) | (1 << logoParser.T__22) | (1 << logoParser.T__23) | (1 << logoParser.T__24) | (1 << logoParser.T__25) | (1 << logoParser.T__26) | (1 << logoParser.T__27) | (1 << logoParser.T__28) | (1 << logoParser.T__29) | (1 << logoParser.T__30) | (1 << logoParser.T__31) | (1 << logoParser.T__32) | (1 << logoParser.T__33) | (1 << logoParser.T__34) | (1 << logoParser.T__35) | (1 << logoParser.T__36) | (1 << logoParser.T__37) | (1 << logoParser.T__38) | (1 << logoParser.T__40) | (1 << logoParser.STRING))) != 0)):
                    break
